# webcam-tablet

./: CMakeLists.txt  README.md  main.cpp  mouseFuncs.cpp  mouseFuncs.h  pixelFuncs.cpp  pixelFuncs.h  screenRes.cpp  screenRes.h  tabletCalc.cpp  tabletCalc.h
GUI/: draggableGUI.cpp  draggableGUI.h  guiColors.cpp  guiColors.h  guiFuncs.cpp  guiFuncs.h
